--- a/ch02处理文本数据.ipynb
+++ b/ch02处理文本数据.ipynb
@@ -684,8 +684,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-17T13:37:53.647801700Z",
-     "start_time": "2025-12-17T13:37:53.547081400Z"
+     "end_time": "2025-12-28T11:22:10.353393200Z",
+     "start_time": "2025-12-28T11:22:10.291345700Z"
     }
    },
    "cell_type": "code",
@@ -703,7 +703,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -717,8 +717,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-17T13:41:34.201902100Z",
-     "start_time": "2025-12-17T13:41:17.427204100Z"
+     "end_time": "2025-12-28T11:22:22.246417Z",
+     "start_time": "2025-12-28T11:22:11.413879300Z"
     }
    },
    "cell_type": "code",
@@ -831,6 +831,430 @@
    "cell_type": "markdown",
    "source": "## 2.6 使用滑动窗口进行数据采样",
    "id": "66cd28c724361dde"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "上一节详细介绍了分词步骤以及将字符串分词成token再转换为整数token ID 的过程。在我们最终为 LLM 创建嵌入之前，还要提前做的一件事是生成训练 LLM 所需的输入-目标对。",
+   "id": "9d0349a26621010"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "在本节中，我们将实现一个数据加载器，通过滑动窗口方法从训练数据集中提取输入-目标对。\n",
+    "\n",
+    "首先，我们将使用前一节中介绍的BPE分词器对我们之前处理的《判决》短篇小说进行分词"
+   ],
+   "id": "fddae7b8be11f55b"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-28T11:22:25.488027600Z",
+     "start_time": "2025-12-28T11:22:25.441570500Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "with open(\"data/the-verdict.txt\",\"r\",encoding=\"utf-8\") as f:\n",
+    "    raw_text = f.read()\n",
+    "\n",
+    "enc_text = tokenizer.encode(raw_text)\n",
+    "print(len(enc_text))"
+   ],
+   "id": "ccad87dcf022df48",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5145\n"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "执行上述代码输出 5145，这表示在训练集上应用BPE分词器后，返回的token总数。\n",
+    "接下来，我们从数据集中移除前50个token以便演示，因为这会在接下来的步骤中产生稍微更有趣的文本段落。"
+   ],
+   "id": "18554277e84b681c"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-28T11:23:38.021820Z",
+     "start_time": "2025-12-28T11:23:37.988855300Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "enc_sample = enc_text[50:]",
+   "id": "61ea7151e4760a5e",
+   "outputs": [],
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "创建输入-目标对以进行下一个单词预测任务的最简单和最直观的方法之一是创建两个变量x和y，其中x包含输入token，y包含目标，即输入向右移动1位的结果。",
+   "id": "9355f027aeb84e24"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-28T11:26:11.151221600Z",
+     "start_time": "2025-12-28T11:26:11.097045300Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "context_size = 4\n",
+    "x = enc_sample[:context_size]\n",
+    "y = enc_sample[1:context_size+1]\n",
+    "print(f\"x: {x}\")\n",
+    "print(f\"y:      {y}\")\n",
+    "#A 上下文大小决定输入中包含多少个token"
+   ],
+   "id": "f74c9d2af54b16db",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: [290, 4920, 2241, 287]\n",
+      "y:      [4920, 2241, 287, 257]\n"
+     ]
+    }
+   ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "在处理输入和目标（即输入向后移动一个位置）后，我们可以创建如图 2.12 所示的下一个单词预测任务，如下所示：",
+   "id": "e37a81b65d138d77"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-28T11:28:36.835853500Z",
+     "start_time": "2025-12-28T11:28:36.795853500Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for i in range(1, context_size+1):\n",
+    "    context = enc_sample[:i]\n",
+    "    desired = enc_sample[i]\n",
+    "    print(context, \"---->\", desired)"
+   ],
+   "id": "6a7ae5c4463ed0d1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[290] ----> 4920\n",
+      "[290, 4920] ----> 2241\n",
+      "[290, 4920, 2241] ----> 287\n",
+      "[290, 4920, 2241, 287] ----> 257\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "箭头左侧（---->）的所有内容代表 LLM 将接收到的输入，而箭头右侧的token ID 则表示 LLM 应该预测的目标token ID。\n",
+    "\n",
+    "为了演示，我们将重复之前的代码，但将token ID 转换为文本："
+   ],
+   "id": "ae431e1e14ac22ee"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-28T11:29:42.376924100Z",
+     "start_time": "2025-12-28T11:29:42.329872Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for i in range(1, context_size+1):\n",
+    "    context = enc_sample[:i]\n",
+    "    desired = enc_sample[i]\n",
+    "    print(tokenizer.decode(context), \"---->\", tokenizer.decode([desired]))"
+   ],
+   "id": "4263518312065c81",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " and ---->  established\n",
+      " and established ---->  himself\n",
+      " and established himself ---->  in\n",
+      " and established himself in ---->  a\n"
+     ]
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "我们现在已经创建了输入-目标对，可以在接下来的章节中应用于 LLM 的训练。\n",
+    "\n",
+    "在我们将token转换为嵌入之前，还有一个任务要完成，正如我们在本章开始时提到的：实现一个高效的数据加载器，该加载器遍历输入数据集并将输入和目标作为 PyTorch 张量返回，这些张量可以视为多维数组。\n",
+    "\n",
+    "具体来说，我们的目标是返回两个张量：一个输入张量，包括 LLM 看到的文本，另一个目标张量，包含 LLM 需要预测的目标.\n",
+    "为了实现高效的数据加载器，我们将使用 PyTorch 内置的 Dataset 和 DataLoader 类。"
+   ],
+   "id": "9eaa64264f213d6e"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-28T11:50:41.399983700Z",
+     "start_time": "2025-12-28T11:50:38.349839600Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Listing 2.5 A dataset for batched inputs and targets\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import torch\n",
+    "\n",
+    "class GPTDatasetV1(Dataset):\n",
+    "    #让GPT初始化一个类型\n",
+    "    def __init__(self, txt, tokenizer, max_length, stride):\n",
+    "        self.input_ids = []\n",
+    "        self.target_ids = []\n",
+    "\n",
+    "        # Tokenize the entire text\n",
+    "        token_ids = tokenizer.encode(txt, allowed_special={\"<|endoftext|>\"})#id是文本内容编码过来的\n",
+    "\n",
+    "        # Use a sliding window to chunk the book into overlapping sequences of max_length\n",
+    "        for i in range(0, len(token_ids) - max_length, stride):\n",
+    "            input_chunk = token_ids[i:i + max_length]\n",
+    "            target_chunk = token_ids[i + 1: i + max_length + 1]\n",
+    "            self.input_ids.append(torch.tensor(input_chunk))\n",
+    "            self.target_ids.append(torch.tensor(target_chunk))\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.input_ids)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.input_ids[idx], self.target_ids[idx]\n",
+    "#A 将整个文本进行分词\n",
+    "#B 使用滑动窗口将书籍分块为最大长度的重叠序列。\n",
+    "#C 返回数据集的总行数\n",
+    "#D 从数据集中返回指定行"
+   ],
+   "id": "c1c645fa57480d6f",
+   "outputs": [],
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "清单 2.5 中的 GPTDatasetV1 类继承自 PyTorch Dataset 类，定义了如何从数据集中提取单行，其中每行由多个token ID（基于 max_length）组成，并赋值给 input_chunk 张量。target_chunk 张量则包含相应的目标。请继续阅读，以了解将此数据集与 PyTorch DataLoader 结合时返回的数据的样子——这将让我们更清晰的了解运作原理。\n",
+    "\n",
+    "以下代码将使用刚创建的 GPTDatasetV1 类，通过 PyTorch DataLoader 以批量方式加载输入"
+   ],
+   "id": "55fb52741d6e9294"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-28T11:53:48.303628400Z",
+     "start_time": "2025-12-28T11:53:48.280077400Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Listing 2.6 A data loader to generate batches with input-with pairs\n",
+    "def create_dataloader_v1(txt, batch_size=4, max_length=256,\n",
+    "                         stride=128, shuffle=True, drop_last=True,\n",
+    "                         num_workers=0):\n",
+    "    # Initialize the tokenizer\n",
+    "    tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+    "    dataset = GPTDatasetV1(txt, tokenizer, max_length, stride)      #B\n",
+    "    dataloader = DataLoader(\n",
+    "      \tdataset,\n",
+    "      \tbatch_size=batch_size,\n",
+    "      \tshuffle=shuffle,\n",
+    "      \tdrop_last=drop_last,                                        #C\n",
+    "      \tnum_workers=0                                               #D\n",
+    "    )\n",
+    "\n",
+    "    return dataloader\n",
+    "\n",
+    "#A 初始化分词器\n",
+    "#B 创建GPTDatasetV1类\n",
+    "#C drop_last=True会在最后一批次小于指定的batch_size时丢弃该批次，以防止训练期间的损失峰值\n",
+    "#D 用于预处理的CPU进程数量"
+   ],
+   "id": "61e17e0f11b1047c",
+   "outputs": [],
+   "execution_count": 15
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "让我们设置 batch_size = 1 和 max_length = 4，观察代码清单 2.5 中的 GPTDatasetV1 类和清单 2.6 中的 create_dataloader_v1 函数如何协同工作：",
+   "id": "76d780e907600019"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-28T11:56:27.357942100Z",
+     "start_time": "2025-12-28T11:56:27.192387500Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "with open(\"data/the-verdict.txt\",\"r\",encoding=\"utf-8\") as f:\n",
+    "    raw_text = f.read()\n",
+    "dataloader = create_dataloader_v1(raw_text, batch_size=1, max_length=4, stride=1, shuffle=False)\n",
+    "data_iter = iter(dataloader)\n",
+    "first_batch = next(data_iter)\n",
+    "print(first_batch)"
+   ],
+   "id": "e1d51547a802ea36",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor([[  40,  367, 2885, 1464]]), tensor([[ 367, 2885, 1464, 1807]])]\n"
+     ]
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "first_batch 变量包含两个张量：第一个张量存储输入token ID，第二个张量存储目标token ID。由于 max_length 设置为 4，因此这两个张量各包含 4 个token ID。请注意，输入大小为 4 相对较小，仅用于演示目的。通常，训练 LLM 的输入大小至少为 256。\n",
+    "\n",
+    "为了阐明 stride=1 的含义，让我们从这个数据集中提取另一个批次："
+   ],
+   "id": "684ad5159abd2afa"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-28T11:57:42.364109200Z",
+     "start_time": "2025-12-28T11:57:42.316753100Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "second_batch = next(data_iter)\n",
+    "print(second_batch)"
+   ],
+   "id": "bd708279f879fdfa",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor([[ 367, 2885, 1464, 1807]]), tensor([[2885, 1464, 1807, 3619]])]\n"
+     ]
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "如果我们将第一个批次与第二个批次进行比较，可以看到第二个批次的token ID 相较于第一个批次右移了一个位置（例如，第一个批次输入中的第二个 ID 是 367，而它是第二个批次输入的第一个 ID）",
+   "id": "a7e60283069261ff"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "迄今为止，我们从数据加载器中采样的批次大小都为1，这主要用于说明运作原理。如果你有深度学习的经验，你可能知道，小批次大小在训练时消耗内存较少，但会导致模型更新变得更加困难。就像在常规深度学习中一样，批次大小的设置是一个权衡，它作为超参数需要在训练 LLM 过程中进行实验和调整。\n",
+    "\n",
+    "在我们继续本章最后两节之前（最后两节专注于从token ID 创建嵌入向量），先简要了解一下如何使用数据加载器以大于 1 的批次大小进行采样："
+   ],
+   "id": "f7e6087d97ce5504"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-28T12:01:18.919676800Z",
+     "start_time": "2025-12-28T12:01:18.847532100Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "dataloader = create_dataloader_v1(raw_text, batch_size=8, max_length=4, stride=4, shuffle=False)\n",
+    "\n",
+    "data_iter = iter(dataloader)\n",
+    "inputs, targets = next(data_iter)\n",
+    "print(\"Inputs:\\n\",inputs)\n",
+    "print(\"\\nTargets:\\n\",targets)"
+   ],
+   "id": "5cfd31a282e00a73",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inputs:\n",
+      " tensor([[   40,   367,  2885,  1464],\n",
+      "        [ 1807,  3619,   402,   271],\n",
+      "        [10899,  2138,   257,  7026],\n",
+      "        [15632,   438,  2016,   257],\n",
+      "        [  922,  5891,  1576,   438],\n",
+      "        [  568,   340,   373,   645],\n",
+      "        [ 1049,  5975,   284,   502],\n",
+      "        [  284,  3285,   326,    11]])\n",
+      "\n",
+      "Targets:\n",
+      " tensor([[  367,  2885,  1464,  1807],\n",
+      "        [ 3619,   402,   271, 10899],\n",
+      "        [ 2138,   257,  7026, 15632],\n",
+      "        [  438,  2016,   257,   922],\n",
+      "        [ 5891,  1576,   438,   568],\n",
+      "        [  340,   373,   645,  1049],\n",
+      "        [ 5975,   284,   502,   284],\n",
+      "        [ 3285,   326,    11,   287]])\n"
+     ]
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "请注意，以上代码将步幅增加到了 4。这是为了全面利用数据集（我们不跳过任何单词），同时避免批次之间的重叠，因为更多的重叠可能会导致过拟合：\n",
+    "\n",
+    "在本章的最后两个部分，我们将实现嵌入层，将token ID 转换为连续的向量表示，这些表示将用作 LLM 的输入数据格式"
+   ],
+   "id": "c6ee99825c8d384e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 2.7 构建词嵌入层\n",
+    "为 LLM 准备训练集的最后一步是将token ID 转换为嵌入向量"
+   ],
+   "id": "8abf2b721b232bdd"
   }
  ],
  "metadata": {
